private-registry-kubernetes-delivery/evidence/ingress-final.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"networking.k8s.io/v1","kind":"Ingress","metadata":{"annotations":{},"name":"webapp-ingress","namespace":"container-platform"},"spec":{"ingressClassName":"nginx","rules":[{"host":"webapp.local","http":{"paths":[{"backend":{"service":{"name":"webapp-service","port":{"number":80}}},"path":"/","pathType":"Prefix"}]}}]}}
  creationTimestamp: "2026-09-18T15:01:12Z"
  generation: 1
  name: webapp-ingress
  namespace: container-platform
  resourceVersion: "1164"
  uid: e7993500-1dda-4e30-ae45-dc24ccfc9619
spec:
  ingressClassName: nginx
  rules:
  - host: webapp.local
    http:
      paths:
      - backend:
          service:
            name: webapp-service
            port:
              number: 80
        path: /
        pathType: Prefix
status:
  loadBalancer:
    ingress:
    - ip: 192.168.49.2
