private-registry-kubernetes-delivery/evidence/service-final.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{},"name":"webapp-service","namespace":"container-platform"},"spec":{"ports":[{"name":"http","port":80,"protocol":"TCP","targetPort":8080}],"selector":{"app":"webapp"},"type":"ClusterIP"}}
  creationTimestamp: "2026-09-18T14:56:01Z"
  name: webapp-service
  namespace: container-platform
  resourceVersion: "480"
  uid: 9be2c472-5f20-4daa-8d47-60992a1df7b8
spec:
  clusterIP: 10.98.20.114
  clusterIPs:
  - 10.98.20.114
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: webapp
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
